--- a/html/rules.html
+++ b/html/rules.html
@@ -48,7 +48,7 @@
         </p>
         <p>
           <b>Многообразие.</b> Мы уважаем и приветствуем разные 
-          мнения и культуры. Блогикум — это место, объединяющее 
+          мнения и культуры. Блогикум - это место, объединяющее 
           самых разных людей. Поделитесь своим уникальным взглядом на мир.  
         </p>
         <p>
@@ -60,7 +60,7 @@
         <p>
           <b>Личность.</b> Мы сохраним ваши сокровенные мысли в тайне. 
           Делитесь своей информацией только с теми, кого выбрали. 
-          Как и насколько засекречивать вашу личную информацию — 
+          Как и насколько засекречивать вашу личную информацию - 
           определяете вы и только вы.  
         </p>
       </div>
